# QT2_1

./: CMakeLists.txt  main.cpp
